[tool.poetry]
name = "falconapi"
version = "0.1.0"
description = ""
authors = ["Khasanjon Mamadaliyev <khasanjon.eng@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.5"
django-mptt = "^0.14.0"
pillow = "^9.5.0"
django-jazzmin = "^2.6.0"
django-filter = "^23.2"
python-dotenv = "^1.0.0"
django-redis = "^5.2.0"
celery = "^5.3.0"
redis = "^4.5.5"
flower = "^1.2.0"
psycopg2-binary = "^2.9.6"
gunicorn = "^20.1.0"
pytest-django = "^4.5.2"
pytest-drf = "^1.1.3"
dj-database-url = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "root.settings"
python_files = "tests.py test_*.py *_tests.py"